# openlimits

./: .env.example  .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO  _config.yml  build.rs  clippy.toml  index.md
.cargo/: config
.github/workflows/: check-release.yml  release.yml  rust.yml  security.yml  test.yml
binance/: Cargo.toml
binance/src/: lib.rs  transport.rs
binance/tests/: account.rs  general.rs  market.rs  websocket.rs
bindings/csharp/: AskBid.cs  Balance.cs  BinanceClientConfig.cs  CString.cs  Candle.cs  CoinbaseClientConfig.cs  ExchangeClient.cs  FFIResult.cs  GetHistoricRatesRequest.cs  GetHistoricTradesRequest.cs  GetOrderHistoryRequest.cs  GetTradeHistoryRequest.cs  LICENSE.txt  LimitOrderRequest.cs  Liquidity.cs  MarketOrderRequest.cs  MarketPair.cs  NashClientConfig.cs  OpenLimits.csproj  Order.cs  OrderStatus.cs  OrderType.cs  Orderbook.cs  Paginator.cs  (+6 more)
bindings/csharp/lib/: Cargo.toml
bindings/csharp/lib/src/: lib.rs
coinbase/: Cargo.toml
crates/exchange/: Cargo.toml
crates/exchange/src/: errors.rs  lib.rs  prelude.rs  shared.rs
crates/exchange/src/market/: symbol.rs
crates/exchange/src/message/: mod.rs  subscription.rs
crates/exchange/src/model/: candle.rs  mod.rs  order_canceled.rs  order_status.rs  order_type.rs  paginator.rs  python.rs  side.rs  time_in_force.rs  websocket.rs
crates/exchange/src/model/request/: cancel_all_order_request.rs  get_historic_trades_request.rs  get_order_history_request.rs  mod.rs  open_limit_order_request.rs  trade_history_request.rs
crates/exchange/src/traits/: mod.rs
crates/exchange/src/traits/info/: exchange_info.rs  market_pair.rs  market_pair_handle.rs  utils.rs
crates/exchange/src/traits/stream/: callback_handle.rs  mod.rs  open_limit_ws.rs
crates/huobi/: Cargo.toml
crates/huobi/src/: exchange.rs  lib.rs  prelude.rs  request_response.rs
crates/huobi/src/exchange/: symbol.rs
crates/huobi/src/message/: mod.rs  requester.rs  subscriber.rs
crates/huobi/tests/: huobi.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: prelude.rs
crates/messaging/tests/: requester.rs  subscriber.rs
crates/openlimits-binance/: Cargo.toml
crates/openlimits-binance/src/: binance_content_error.rs  binance_parameters.rs  lib.rs  transport.rs
crates/openlimits-binance/src/client/: account.rs  base_client.rs  market.rs  mod.rs  stream.rs  websocket.rs
crates/openlimits-binance/src/model/: exchange_filter.rs  exchange_information.rs  market_pair.rs  mod.rs  order.rs  order_status.rs  rate_limit_type.rs  symbol_filter.rs
crates/openlimits-binance/src/model/websocket/: account_update_balance.rs
crates/openlimits-coinbase/: Cargo.toml
crates/openlimits-coinbase/src/: coinbase_credentials.rs  coinbase_parameters.rs  lib.rs  transport.rs
crates/openlimits-coinbase/src/client/: account.rs  base_client.rs  market.rs  mod.rs  stream.rs  websocket.rs
crates/openlimits-coinbase/src/model/: account.rs  book_level.rs  book_record_l2.rs  book_record_l3.rs  cancel_after.rs  candle_request_params.rs  fill.rs  get_order_request.rs  market_pair.rs  mod.rs  product.rs  trade.rs
crates/openlimits-coinbase/src/model/websocket/: activate.rs  change.rs  channel.rs  channel_type.rs  coinbase_subscription.rs  coinbase_websocket_message.rs  done.rs  full.rs  level2.rs  level2_snapshot_record.rs  level2_update_record.rs  match_.rs  mod.rs  open.rs  reason.rs  received.rs  stop_type.rs  subscribe.rs  ticker.rs
crates/openlimits-exchange/: Cargo.toml  build.rs
crates/openlimits-exchange/src/: errors.rs  exchange.rs  lib.rs  prelude.rs  shared.rs
crates/openlimits-exchange/src/market/: mod.rs
crates/openlimits-exchange/src/message/: mod.rs  request.rs  subscription.rs
crates/openlimits-exchange/src/model/: currency.rs  interval.rs  market_pair.rs  mod.rs  order.rs  order_filter.rs  paginator.rs  python.rs  ticker.rs  time_in_force_visitor.rs  trade.rs  transaction.rs  websocket.rs
crates/openlimits-exchange/src/model/request/: cancel_all_order_request.rs  get_historic_rates_request.rs  get_order_history_request.rs  get_price_ticker_request.rs  mod.rs  open_limit_order_request.rs  open_market_order_request.rs  order_book_request.rs  trade_history_request.rs
crates/openlimits-exchange/src/traits/: mod.rs
crates/openlimits-exchange/src/traits/info/: exchange_info.rs  exchange_info_retrieval.rs  market_pair.rs  market_pair_handle.rs  mod.rs
crates/openlimits-exchange/src/traits/stream/: exchange_stream.rs  mod.rs  open_limit_stream.rs
crates/openlimits-messaging/: Cargo.toml
crates/openlimits-messaging/src/: lib.rs  requester.rs  subscriber.rs
crates/openlimits-messaging/tests/: requester.rs  subscriber.rs
crates/openlimits-nash/: Cargo.toml
crates/openlimits-nash/src/: lib.rs  nash_parameters.rs  nash_stream.rs  nash_websocket.rs  utils.rs
examples/: any.rs  any_websocket.rs  binance.rs  binance_websocket.rs  coinbase.rs  coinbase_websocket.rs
libs/huobi/: Cargo.toml
libs/huobi/tests/: huobi.rs
openlimits/: .env.example  .gitignore  Cargo.toml
openlimits-wrapper/: Cargo.toml
openlimits-wrapper/src/: lib.rs
openlimits/src/: client.rs  exchange.rs  exchange_ws.rs  lib.rs  shared.rs
openlimits/src/binance/: mod.rs
openlimits/src/binance/client/: general.rs  mod.rs
openlimits/src/binance/model/: mod.rs  websocket.rs
openlimits/src/coinbase/: mod.rs
openlimits/src/coinbase/client/: websocket.rs
openlimits/src/coinbase/model/: websocket.rs
openlimits/src/model/: mod.rs  websocket.rs
openlimits/src/nash/: mod.rs
openlimits/tests/: mod.rs  test.rs
openlimits/tests/apis/binance/: mod.rs
openlimits/tests/apis/coinbase/: account.rs
openlimits/tests/binance/: account.rs  market.rs
openlimits/tests/coinbase/: account.rs  market.rs
openlimits/tests/nash/: websocket.rs
shared/: Cargo.toml
shared/src/: errors.rs  exchange_info.rs  lib.rs
src/: any_exchange.rs  bindings.rs  client.rs  errors.rs  exchange.rs  exchange_info.rs  exchange_ws.rs  lib.rs  openlimits.rs  prelude.rs  reconnectable_ws.rs  shared.rs
tests/: mod.rs  tests.rs
(+350 files in other folders)
