[package]
name = "openlimits"
version = "0.1.0"
authors = ["steffel <2143646+steffenix@users.noreply.github.com>"]
edition = "2018"
description = "A open source Rust high performance cryptocurrency trading API with support for multiple exchanges and language wrappers. Focused in safety, correctness and speed."
license = "BSD-2-Clause"
repository = "https://github.com/nash-io/openlimits"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
python = ["pyo3"]

[dependencies]
async-trait = "0.1"
base64 = "0.12.3"
chrono = "0.4.11"
dotenv = "0.15.0"
futures = "0.3.5"
hex = "0.4.2"
hmac = "0.8.1"
log = "0.4.8"
reqwest = { version = "0.10", features = ["json", "blocking"] }
rust_decimal = "1.7.0"
sugar = "0.2.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
serde_urlencoded = "0.6.1"
thiserror = "1.0.20"
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = { version = "0.10.1", features = ["tls"] }
tungstenite = "0.11.0"
sha2 = "0.9.1"
url = "2.1.1"
derive_more = "0.99"
nash-protocol = { version = "0.1.9", default-features = false, features = ["num_bigint"] }
nash-native-client = { version = "0.1.4", default-features = false, features = ["num_bigint"] }
pyo3 = { version = "0.12.3", optional = true }
