[package]
name = "openlimits"
version = "0.1.22-alpha.0"
authors = ["steffel <2143646+steffenix@users.noreply.github.com>", "Ethan Fast <ethan@nash.io>", "Danilo Guanabara <danilo@nash.io>"]
edition = "2018"
description = "A open source Rust high performance cryptocurrency trading API with support for multiple exchanges and language wrappers. Focused in safety, correctness and speed."
license = "BSD-2-Clause"
repository = "https://github.com/nash-io/openlimits"
keywords = ["cryptocurrency", "exchange", "openlimits", "api"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["rust_gmp"]
#rust_gmp = ["nash-protocol/rust_gmp", "nash-native-client/rust_gmp"]
#num_bigint = ["nash-protocol/num_bigint", "nash-native-client/num_bigint"]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
chrono = { version = "0.4", features = ["std", "serde"] }
dotenv = "0.15"
futures = "0.3"
futures-util = "0.3"
hex = "0.4.2"
hmac = "0.8.1"
log = "0.4.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rust_decimal = "1.14.3"
sugar = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.0"
thiserror = "1.0.20"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.13", features = ["tls"] }
tungstenite = "0.12"
sha2 = "0.9.1"
url = "2.1.1"
derive_more = "0.99"
#nash-protocol = { version = "0.1", default-features = false, features = ["rustcrypto"] }
#nash-native-client = { version = "0.1", default-features = false, features = ["rustcrypto"] }
pyo3 = { version = "0.12.3", optional = true }
openlimits-binance = { version = "0.1" }
openlimits-exchange = { version = "0.1" }
