[package]
name = "openlimits"
version = "0.3.1-alpha.0"
authors = ["steffel <2143646+steffenix@users.noreply.github.com>", "Ethan Fast <ethan@nash.io>", "Danilo Guanabara <danilo@nash.io>"]
edition = "2018"
description = "A open source Rust high performance cryptocurrency trading API with support for multiple exchanges and language wrappers. Focused in safety, correctness and speed."
license = "BSD-2-Clause"
repository = "https://github.com/nash-io/openlimits"
keywords = ["cryptocurrency", "exchange", "openlimits", "api"]

[[example]]
name = "orderbook"
path = "examples/rust/orderbook.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bindings = ["ligen", "ligen-macro", "ligen-cargo", "ligen-rust", "ligen-csharp"]
default = ["rust_gmp"]
rust_gmp = ["openlimits-nash/rust_gmp"]
num_bigint = ["openlimits-nash/num_bigint"]

[dependencies]
openlimits-binance  = "0.3.0"
openlimits-exchange = "0.3.0"
openlimits-coinbase = "0.3.0"
openlimits-nash = "0.3.0"
ligen-macro = { path = "../../sensorial/systems/ligen/ligen/macro", optional = true }
ligen        = { path = "../../sensorial/systems/ligen/ligen", optional = true }
lazy_static = "1.4.0"
rust_decimal = "1.17.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
rust_decimal = "1.14.3"
futures = "0.3"
dotenv = "0.15.0"

[build-dependencies]
ligen        = { path = "../../sensorial/systems/ligen/ligen", optional = true }
ligen-cargo  = { path = "../../sensorial/systems/ligen/generators/ligen-cargo", optional = true }
ligen-rust   = { path = "../../sensorial/systems/ligen/generators/ligen-rust", optional = true }
ligen-csharp = { path = "../../sensorial/systems/ligen/generators/ligen-csharp", optional = true }
serde_json = "1.0.73"