[package]
name = "openlimits-wrapper"
version = "0.1.0"
authors = ["Ethan Fast <ejhfast@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openlimits = {version = "*", path = "../openlimits" }
serde = { version = "1.0.114", features = ["derive"]}
serde_json = "1.0.55"
tokio = { version = "0.2", features = ["full"] }
