[package]
name = "openlimits"
version = "0.1.0"
authors = ["steffel <steffel@nash.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { path = "../binance" }
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
