[package]
name = "openlimits"
version = "0.1.0"
authors = ["steffel <steffel@nash.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
binance = { path = "../binance" }
coinbase = { path = "../coinbase" }
chrono = "0.4.13"
dotenv = "0.15.0"
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.7.0"
shared = { path = "../shared" }
tokio = { version = "0.2", features = ["full"] }