[package]
name = "shared"
version = "0.1.0"
authors = ["steffel <steffel@nash.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"]}
serde_json = "1.0.55"
thiserror = "1.0.20"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio-tungstenite = { version = "0.10.1", features = ["tls"]}
url = "2.1.1"
serde_urlencoded = "0.6.1"