[package]
name = "exchange"
version = "0.1.0"
authors = ["Danilo Guanabara <danguafer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3.12"
chrono = "0.4.19"
rust_decimal = "1.10.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
thiserror = "1.0.23"
messaging = { path = "../messaging" }
derive_more = "0.99.11"
url = "2.2.0"
serde_urlencoded = "0.7.0"
anyhow = "1.0.38"