[package]
name = "openlimits-binance"
version = "0.1.0"
authors = ["Danilo Guanabara <danguafer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exchange = { path = "../openlimits-exchange" }
async-trait = "0.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_urlencoded = "0.7.0"
rust_decimal = "1.14.0"
chrono = { version = "0.4", features = ["std", "serde"] }
hex = "0.4.2"
log = "0.4.8"
hmac = "0.8.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
thiserror = "1.0.20"
sha2 = "0.9.1"
url = "2.1.1"
futures = "0.3"
tokio = "1.6.0"
tokio-tungstenite = { version = "0.13", features = ["tls"] }
