[package]
name = "openlimits-exchange"
version = "0.2.0"
authors = ["Danilo Guanabara <danilo@sensorial.systems>"]
edition = "2018"
description = "The exchange traits of OpenLimits."
license = "BSD-2-Clause"
repository = "https://github.com/nash-io/openlimits"
keywords = ["cryptocurrency", "exchange", "openlimits", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3.12"
chrono = "0.4.19"
rust_decimal = "1.10.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
thiserror = "1.0.23"
openlimits-messaging = "0.1"
derive_more = "0.99.11"
url = "2.2.0"
serde_urlencoded = "0.7.0"
anyhow = "1.0.38"
# FIXME: The openlimits-exchange should be transport agnostic.
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio-tungstenite = { version = "0.13", features = ["tls"] }
tokio = "1.6.0"
